refactor: Enhanced Switch (56处) + Text Blocks (13处) 批量改造
Enhanced Switch 改造:
- 将 56 处传统 switch 转为箭头语法/switch 表达式
- 覆盖 14 个模块、40 个文件
- 包含 return switch 表达式、箭头语法、多标签合并、yield
- 跳过 1 处（收益过低）

Text Blocks 改造:
- 将 13 处多行字符串拼接转为 Text Blocks (三引号)
- 覆盖 6 个文件：SQL语句、String.format模板、@Select注解
- 跳过 ~30 处（2行拼接/变量拼接/日志/注解等收益低的）

修复:
- 修复 TerminateRequest 测试文件的 record 构造器调用

46 files changed, +549/-836
全量编译通过 (mvn clean compile -DskipTests BUILD SUCCESS)